--- a/templates/config.html
+++ b/templates/config.html
@@ -31,6 +31,16 @@
     <textarea class="form-control text-monospace" name="challenge_order" rows="5"></textarea>
   </div>
 
+  <div class="form-group">
+    <label>
+      Tabs Function<br>
+      <small class="form-text text-muted">
+        Define a function that takes in the list of categories, and returns an list of tabs. Each tab object should have a "name" and a "categories" list.
+      </small>
+    </label>
+    <textarea class="form-control text-monospace" name="category_tabs" rows="5"></textarea>
+  </div>
+
   <div>
     <div class="form-check">
       <input type="checkbox" class="form-check-input" id="use_builtin_code_highlighter" name="use_builtin_code_highlighter" checked>
