--- a/assets/scss/includes/components/_challenge.scss
+++ b/assets/scss/includes/components/_challenge.scss
@@ -18,3 +18,17 @@
   opacity: 0.6;
   border: none;
 }
+
+* {
+  scroll-margin-top: 25px;
+}
+
+.sticky-top {
+  top: 2em;
+}
+
+.category-sidebar {
+  height: 100%;
+  max-height: 100vh;
+  overflow-y: scroll;
+}
