--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
           'teamName': {{ Team.name | tojson }},
           'start': {{ Configs.start | tojson }},
           'end': {{ Configs.end | tojson }},
+          'topCategory': {{ Configs.top_category | tojson }},
           'themeSettings': {{ Configs.theme_settings | tojson }},
           'eventSounds': [
             "/themes/core/static/sounds/notification.webm",
